--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="css/exp4.css">
-</head>
-<body>
-		  <iframe id="exp_container" src="exp4.html"></iframe>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+		<link rel="stylesheet" href="./css/main.css">
+	</head>
 
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
-</body>
+		<div class="columns is-centered">
+			<div class="column has-text-centered mt-2">
+				<button id="restart" class="action-button">Restart</button>
+			</div>
+		</div>
+
+		<div class="columns is-mobile is-centered">
+			<div class="column has-text-centered">
+				<div class="hero is-small">
+					<div class="hero-body">
+						<canvas class="main" id="main"></canvas>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="columns is-centered">
+			<div class="column has-text-centered is-one-quarter ml-2 mt-3">
+				<div class = "columns box mt-3 ml-2" >
+					<div class="column">
+						<span class="tag is-primary is-light">Length</span><br>
+						<span id="length">80 mm</span><br><br>
+						<span class="tag is-primary is-light">Diameter</span><br>
+						<span id="diameter">6 mm</span> <br><br>
+						<span class="tag is-primary is-light">Angle</span><br>
+						<span id = "angle">0.0 deg</span><br><br>
+					</div>
+					<div class="column">
+						<span class="tag is-primary is-light">Polar MOI</span><br>
+						<span id = "moi">1.27235e-10 m<sup>4</sup></span><br><br>
+						<span class="tag is-primary is-light">Modulus of Rigidity</span><br>
+						<span id="rigidity">29.473138 GPa </span><br><br>
+
+						<span class="tag is-primary is-light">Torque</span><br>
+						<span id = "torque">0.0 N-m</span> 
+					</div>
+				</div>
+			</div>
+			<div class="column has-text-centered">
+				<div class="hero is-small">
+					<div id="chartContainer"></div>
+				</div>
+			</div>
+		</div>
+
+		<script src="https://unpkg.com/mathjs@9.2.0/lib/browser/math.js"></script>
+		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+		<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+		<script src="./js/main.js"></script>
+	</body>
 </html>
