review changes made

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -10,13 +10,11 @@
 
 		<div class="columns is-centered">
 			<div class="column has-text-centered mt-2">
-				<button id="play" class="action-button">Play</button>
-				<button id="pause" class="action-button">Pause</button>
-				<button id="restart" class="action-button">Restart</button>
-				<div class="slidecontainer">
-					<p>Simulation speed: <span id="demo_speed"></span>x</p>
-					<input type="range" min="1" max="8" value="4" class="slider" id="speed">
-				</div>
+				<button id="play" class="v-button">Play</button>
+				<button id="pause" class="v-button">Pause</button>
+				<button id="restart" class="v-button">Restart</button>
+				<p>Simulation speed: <span id="demo_speed"></span>x</p>
+				<input type="range" min="1" max="8" value="4" class="slider" id="speed">
 			</div>
 		</div>
 
