--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,64 +1,63 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/virtual-labs/virtual-style@0.0.5-b/css/style.min.css"/>
-		<link rel="stylesheet" href="./css/main.css">
-	</head>
 
-		<div class="columns is-centered">
-			<div class="column has-text-centered mt-2">
-				<button id="play" class="v-button">Play</button>
-				<button id="pause" class="v-button">Pause</button>
-				<button id="restart" class="v-button">Restart</button>
-				<p>Simulation speed: <span id="demo_speed"></span>x</p>
-				<input type="range" min="1" max="8" value="4" class="slider" id="speed">
-			</div>
-		</div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/virtual-labs/virtual-style@0.0.6-b/css/style.min.css" />
+    <link rel="stylesheet" href="./css/main.css">
+</head>
 
-		<div class="columns is-centered">
-			<div class="column has-text-centered">
-				<canvas class="main" id="main"></canvas>
-			</div>
-		</div>
-		<div class="columns is-centered">
-			<div class="column is-one-fourth">
-				<div class="v-datalist-container">
-				  <div class="v-datalist-title">Observation Table</div>
-				  <div class="v-datalist-row v-bold">Length of Rod = 80mm</div>
-				  <div class="v-datalist-row v-bold">Diameter of Rod = 6mm</div>
-				  <div class="v-datalist-row v-bold">Polar MOI = 1.27235e-10 m<sup>4</sup></div>
-				  <div class="v-datalist-row v-bold">Modulus of Rigidity = 29.473138 GPa</div>
-				  <div class="v-datalist-row">
-					<div class="v-table-wrap">
-					  <table class="table is-bordered is-fullwidth">
-						<thead>
-						  <tr>
-							<th>Angle</th>
-							<th>Torque</th>
-						  </tr>
-						</thead>
-						<tbody>
-						  <tr>
-							<td id="angle">0.0 deg</td>
-							<td id="torque">0.0 N-m</td>
-						  </tr>
-						</tbody>
-					  </table>
-					</div>
-				  </div>
-				</div>
-			  </div>
-			<div class="column has-text-centered">
-				<div id="chartContainer"></div>
-			</div>
-		</div>
+<div class="columns is-centered">
+    <div class="column has-text-centered mt-2">
+        <button id="play" class="v-button">Play</button>
+        <button id="pause" class="v-button" disabled>Pause</button>
+        <button id="restart" class="v-button" disabled>Restart</button>
+        <p>Simulation speed: <span id="demo_speed"></span>x</p>
+        <input type="range" min="1" max="8" value="4" class="slider" id="speed">
+    </div>
+</div>
 
-		<script src="https://unpkg.com/mathjs@9.2.0/lib/browser/math.js"></script>
-		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-		<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
-		<script src="./js/main.js"></script>
-	</body>
+<div class="columns is-centered">
+    <div class="column has-text-centered">
+        <canvas class="main" id="main"></canvas>
+    </div>
+</div>
+<div class="columns is-centered">
+    <div class="column is-one-fourth">
+        <div class="v-datalist-container">
+            <div class="v-datalist-title">Observation Table</div>
+            <div class="v-datalist-row v-bold">Length of Rod = 80mm</div>
+            <div class="v-datalist-row v-bold">Diameter of Rod = 6mm</div>
+            <div class="v-datalist-row v-bold">Polar MOI = 1.27235e-10 m<sup>4</sup></div>
+            <div class="v-datalist-row v-bold">Modulus of Rigidity = 29.473138 GPa</div>
+            <div class="v-datalist-row">
+                <div class="v-table-wrap">
+                    <table class="table is-bordered is-fullwidth">
+                        <thead>
+                            <tr>
+                                <th>Angle</th>
+                                <th>Torque</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td id="angle">0.0 deg</td>
+                                <td id="torque">0.0 N-m</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="column has-text-centered">
+        <div id="chartContainer"></div>
+    </div>
+</div>
+
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script src="./js/main.js"></script>
+</body>
+
 </html>
