--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -19,12 +19,12 @@
 </div>
 
 <div class="columns is-centered">
-    <div class="column has-text-centered">
-        <canvas class="main" id="main"></canvas>
+    <div class="column has-text-centered mt-0 mb-0">
+        <canvas class="main" id="main"> </canvas>
     </div>
 </div>
 <div class="columns is-centered">
-    <div class="column is-one-fourth">
+    <div class="column is-two-fifth">
         <div class="v-datalist-container">
             <div class="v-datalist-title">Observation Table</div>
             <div class="v-datalist-row v-bold">Length of Rod = 80mm</div>
@@ -52,12 +52,13 @@
         </div>
     </div>
     <div class="column has-text-centered">
-        <div id="chartContainer"></div>
+        <div id="chartContainer" class="mt-0"></div>
     </div>
 </div>
 
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script src='https://cdn.plot.ly/plotly-2.2.0.min.js'></script>
 <script src="./js/main.js"></script>
+<script src="./js/data.json"></script>
 </body>
 
 </html>
